Additional fix for DOCS-57: Add collapse/expand chapter in single-page HTML
Tested with forgerock-doc-maven-plugin-test.

--- a/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
@@ -243,7 +243,7 @@ div.synopsis {
     white-space: pre;
 }
 
-.toggle, .tocollapse, .toexpand {
+.toggle, .tocollapse, .toexpand, .bookcollapse, .bookexpand {
     position: relative;
     left: -24px;
     float: left;
